@@ -22,7 +22,6 @@ import com.thoughtworks.go.domain.SiteUrl;
 import com.thoughtworks.go.server.service.support.toggle.FeatureToggleService;
 import com.thoughtworks.go.server.service.support.toggle.Toggles;
 import com.thoughtworks.go.util.SslVerificationMode;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.client.methods.*;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.eclipse.jetty.util.resource.Resource;
@@ -230,7 +229,7 @@ public class UrlRewriterIntegrationTest {
 
             try (CloseableHttpResponse response = httpClient.execute(httpMethod)) {
                 assertThat(response.getStatusLine().getStatusCode()).isEqualTo(assertion.responseCode);
-                assertThat(IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8)).isEqualTo(assertion.servedUrl);
+                assertThat(new String(response.getEntity().getContent().readAllBytes(), StandardCharsets.UTF_8)).isEqualTo(assertion.servedUrl);
             }
         }
     }
